# CodeSnippets

./: README.md
NmosScripts/: README.txt  run_nmos_helper.bat
NmosScripts/NmosTestController/: NmosController.py
NmosScripts/NmosTestSender/src/: CMakeLists.txt
NmosScripts/NmosTestSender/src/NmosTestSender/: CMakeLists.txt  NmosTestSender.cpp  NmosTestSender.h
NmosScripts/NmosTestSender/src/NmosTestSender/lib/: nvnmos.lib
NmosServer/: NmosNodeServer.cpp  NmosNodeServer.h
SDPParser/: CMakeLists.txt  SDPEnums.h  SDPParser.h
SDPParser/sdp-transform/docs/: example_sdp_file.sdp
SDPParser/sdp_adapter/: SDP.h  SDPParser.cpp  sdp_adapter.h
TrainingSetCreator/: ReadMe.md  cubic.py  euclidean.py  field_extractor.py  frame_extractor.py  interpolator.py  main.py  utility.py
